# skodaconnect

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  dashboardskoda.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  skoda.py  skodaconnect.py  test-requirements.txt  test.py  vehicle.py
.github/workflows/: ci.yml  publish.yml  stale.yml
example/: example.py  exampleMQTT.py
skodaconnect/: __init__.py  __version__.py  api.py  connection.py  const.py  dashboard.py  dashboardskoda.py  exceptions.py  utilities.py  vehicle.py
skodaconnect/api/: __init__.py  technical.py
skodaconnect/api/base/: __init__.py  base.py  client.py  const.py
skodaconnect/api/connect/: __init__.py  client.py  const.py
skodaconnect/api/mbb/: __init__.py  client.py  const.py  mbb.py
skodaconnect/api/technical/: __init__.py  client.py  const.py
skodaconnect/helpers/: html.py  token.py
skodaconnect/strings/: globals.py  http.py  jwt.py  urls.py
test/: dummy_test.py  test_connect.py
test/fixtures/: openid-configuration.json  signin_page.html  signin_page_password.html
tests/: dummy_test.py
vwgconnect/: __init__.py  __version__.py
vwgconnect/_OLD_/: connection.py  exceptions.py
vwgconnect/helper/: html.py  token.py
vwgconnect/platform/: __init__.py  base.py  connect.py  connectconst.py  mbb.py  mbbconst.py  skoda.py  skodaconst.py
vwgconnect/platform/base/: __init__.py  client.py
vwgconnect/platform/connect/: __init__.py  client.py
vwgconnect/platform/mbb/: __init__.py  client.py
vwgconnect/platform/skoda/: __init__.py  client.py
vwgconnect/vehicle/: __init__.py  base.py  const.py  mbb.py  skoda.py
vwgconnect/vehicle/datamodel/: __init__.py  mbbmodel.py  skodamodel.py
