[metadata]
description-file = README.md

[flake8]
ignore =
    I201,
    W503,
    CFQ001,
    CFQ002

filename =
    dashboardskoda.py
    skodaconnect.py

exclude =
    .git,
    __pycache__,
    *.txt,
    *.md,
    *.cfg

max_line_length = 127
count = True
inline_quotes = single

#format = {yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s

